--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito Rolf e Deep Tissue)</span></h3>
+                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova uma recuperação eficaz. </p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
@@ -203,6 +203,17 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Integrativas</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Ventosaterapia</h3>
                             <p class="mx-md-5 px-5">Descubra a antiga arte da Ventosaterapia e experimente seus benefícios terapêuticos. As ventosas são aplicadas estrategicamente para promover a circulação sanguínea, aliviar a tensão muscular e melhorar a saúde geral. Libere as toxinas e encontre alívio natural com a Ventosaterapia.</p>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                    <img class="position-absolute w-100 h-100" src="img/lib.jpg" style="object-fit: cover;">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
+                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito ROLF)</span></h3>
+                            <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova uma recuperação eficaz. </p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank">Agendar</a>
                         </div>
                     </div>
@@ -705,13 +716,13 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#rolf"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito Rolf)</a>
                                 <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Avançada/Deep Tissue)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
                                 <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
