--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>-->
+                    <div class="nav-item dropdown hoverdrop">
+                        <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
+                        <div class="dropdown-menu rounded-0 m-0">
+                            <a href="#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
+                            <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
+                            <a href="#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
+                            <a href="#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="#vent" class="dropdown-item">Ventosaterapia</a>
+                            <a href="#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
+                        </div>
+                    </div>
                     <a href="contato.html" class="nav-item nav-link ">Contato</a>
                 </div>
                 <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
@@ -716,7 +728,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Avançada/Deep Tissue)</a>
+                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
