--- a/servicos.html
+++ b/servicos.html
@@ -129,7 +129,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="#dt" class="dropdown-item">Liberação miofascial avançada (Deep Tissue)</a>
+                            <a href="#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
                             <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="#dl" class="dropdown-item">Drenagem Linfática</a>
