--- a/servicos.html
+++ b/servicos.html
@@ -325,7 +325,8 @@ Ao longo do processo de Rolfing, que geralmente envolve uma série de sessões, 
 
 Além dos benefícios físicos, a terapia Rolfing também pode ter um impacto emocional, já que acredita-se que o alinhamento e a liberação de tensões no corpo podem influenciar o bem-estar mental e emocional do indivíduo.  <br>
 
-É importante destacar que o Rolfing é uma prática que requer habilidade e conhecimento técnico por parte do terapeuta. Portanto, é recomendável buscar um profissional qualificado e certificado em Rolfing para garantir uma experiência segura e eficaz.
+Geralmente, o Rolfing é realizado em uma série de 10 sessões, embora o número exato de sessões possa variar dependendo das necessidades e objetivos individuais de cada cliente. Cada sessão tem uma duração média de 60 a 90 minutos. O terapeuta começa cada sessão com uma avaliação do cliente, observando sua postura, padrões de movimento e áreas de tensão ou desconforto. Com base nessa avaliação, o terapeuta desenvolve um plano personalizado para abordar as áreas específicas que precisam de atenção. Cada sessão é projetada para construir sobre a anterior, criando um progresso contínuo na direção do realinhamento e da integração postural. À medida que o cliente passa pelas sessões, ele pode começar a notar mudanças na sua postura, no alívio de tensões musculares e em uma maior liberdade de movimento.<br>
+                        É importante ressaltar que cada pessoa pode responder de forma diferente ao Rolfing, e a experiência durante as sessões pode variar de acordo com a sensibilidade e as necessidades individuais. Portanto, é essencial que o cliente se comunique com o terapeuta durante o processo para fornecer feedback e garantir que suas expectativas e objetivos sejam atendidos de forma adequada.
                     
 
                     </p>
