--- a/shell.html
+++ b/shell.html
@@ -122,13 +122,13 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
-                            <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
-                            <a href="#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
-                            <a href="#dl" class="dropdown-item">Drenagem Linfática</a>
-                            <a href="#vent" class="dropdown-item">Ventosaterapia</a>
-                            <a href="#pq" class="dropdown-item">Pedras quentes</a>
-                            <a href="#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
+                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
+                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
+                            <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
+                            <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
+                            <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
                         </div>
                     </div>
                     <a href="contato" class="nav-item nav-link active">Contato</a>
