--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 <li data-target="#header-carousel" data-slide-to="3"></li>
                 <li data-target="#header-carousel" data-slide-to="4"></li>
                 <li data-target="#header-carousel" data-slide-to="5"></li>
+                <li data-target="#header-carousel" data-slide-to="6"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
@@ -720,7 +721,6 @@
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-white-50 mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
                                 <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
-                                <a class="text-white-50 mb-2" href="servicos"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
                                 <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
                                 <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a>
                             </div>
