--- a/sobre.html
+++ b/sobre.html
@@ -108,7 +108,18 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="sobre" class="nav-item nav-link">Sobre</a>
-                    <a href="servicos" class="nav-item nav-link">Serviços</a>
+                     <div class="col-sm-6 mb-5">
+                            <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
+                            <div class="d-flex flex-column justify-content-start">
+                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a>
+                                <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
+                                <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
+                                <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
+                                <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
+                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
+                            </div>
+                        </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
