--- a/servicos.html
+++ b/servicos.html
@@ -229,7 +229,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/wellness.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/pq.jpg" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Massagem com pedras quentes</h1>
@@ -246,7 +246,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/wellness.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/vent.jpg" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Ventosaterapia</h1>
