--- a/servicos.html
+++ b/servicos.html
@@ -173,7 +173,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100" src="img/lib.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/libe.jpg" alt="">
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Liberação miofascial (Deep tissue)</h1>
