--- a/sobre.html
+++ b/sobre.html
@@ -108,18 +108,18 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="sobre" class="nav-item nav-link">Sobre</a>
-                     <div class="col-sm-6 mb-5">
-                            <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
-                            <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a>
-                                <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
-                                <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
-                                <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
-                                <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
-                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
-                            </div>
+                     <div class="nav-item dropdown hoverdrop">
+                        <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
+                        <div class="dropdown-menu rounded-0 m-0">
+                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
+                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
+                            <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
+                            <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
+                            <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
                         </div>
+                    </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
