--- a/shell.html
+++ b/shell.html
@@ -163,10 +163,11 @@
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
+                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>
                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.linkedin.com/in/willsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
+                       
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
