--- a/sobre.html
+++ b/sobre.html
@@ -146,7 +146,7 @@
     
     
     <div class="container-fluid py-5">
-        <div class="container py-5">
+        <div class="container pt-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 pb-5 pb-lg-0">
                     <img class="img-fluid w-100" src="img/wellness.jpg" alt="">
@@ -160,7 +160,8 @@
             </div>
         </div>
     </div>
-     <div class="header_svg_list flex_row_center qrcodes contatopage">
+    <h1 class="pb-2 pt-5 text-center">Contato</h1>
+     <div class="header_svg_list flex_row_center qrcodes contatopage pt-0 pb-3">
             <div class="main_text_item contatolist m-auto px-0">
           <p>Whatsapp: <a href="https://api.whatsapp.com/send?phone=5511974237159&amp;text=Ol%C3%A1%20Will%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="nofollow">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve" >
