--- a/preco.html
+++ b/preco.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h4 class="mb-4">Liberação miofascial (Deep tissue)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -189,8 +189,8 @@
                     <img class="img-fluid w-100" src="img/class.jpg" alt="">
                 </div>
                 <div class="col-lg-9">
-                    <h4 class="mb-4">Massagem Sueca(Clássica)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <h4 class="mb-4">Massagem Sueca (Clássica)</h4>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h4 class="mb-4">Massagem Relaxante</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Relaxante." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h4 class="mb-4">Drenagem linfática</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$90,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$90,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h4 class="mb-4">Massagem com pedras quentes</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h4 class="mb-4">Ventosaterapia</h4>
-                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -263,8 +263,8 @@
                     <img class="img-fluid w-100" src="img/rolff.jpg" alt="">
                 </div>
                 <div class="col-lg-9">
-                    <h4 class="mb-4">Conceito ROLF</h4>
-                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$210,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&amp;text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20Sueca%20(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <h4 class="mb-4">Liberação miofascial (Conceito ROLF)</h4>
+                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$210,00<br><a href="https://api.whatsapp.com/send?phone=11974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Conceito%20ROLF)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
