--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                     <a href="preco" class="nav-item nav-link">Preços</a>
                     <a href="contato.html" class="nav-item nav-link ">Contato</a>
                 </div>
-                <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
-            </div>
+<a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
     </div>
     <!-- Navbar End -->
