--- a/servicos.html
+++ b/servicos.html
@@ -147,8 +147,7 @@
                     
                     <a href="contato" class="nav-item nav-link">Contato</a>
                 </div>
-                <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
-            </div>
+<a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank" class="btn btn-primary d-none d-lg-block">Agendar</a>            </div>
         </nav>
     </div>
     <!-- Navbar End -->
