--- a/sobre.html
+++ b/sobre.html
@@ -645,7 +645,7 @@ Graduação em Análise e Desenvolvimento de Sistemas. <br class="clear">- Facul
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
                                 <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#rolf"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
