--- a/preco.html
+++ b/preco.html
@@ -129,13 +129,13 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link active" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
-                            <a href="#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
-                            <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
-                            <a href="#dl" class="dropdown-item">Drenagem Linfática</a>
-                            <a href="#pq" class="dropdown-item">Pedras quentes</a>
-                            <a href="#vent" class="dropdown-item">Ventosaterapia</a>
-                            <a href="#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
+                            <a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
+                            <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
+                            <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
+                            <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
+                            <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
+                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a>
                         </div>
                     </div>
                     
@@ -314,7 +314,7 @@
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
                                 <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#rolf"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
